[tool.poetry]
name = "mohy"
version = "0.1.0"
description = ""
authors = ["Masahiro Ishii <marufeuille@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.0"
mypy = "^0.812"
black = "^20.8b1"
Flask = "^1.1.2"
slack-sdk = "^3.4.2"
aiohttp = "^3.7.4"
slack-bolt = "^1.4.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
